metade da tela inicial

--- a/telas/login-e-cadastro.html
+++ b/telas/login-e-cadastro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faça parte da Alumnus!</title>
+    <title>Faça parte do Alumnus! - Alumnus</title>
     <!-- Favicon da página -->
     <link rel="icon" href="../img/icons/favicon.ico">
     <!-- Importação da fonte Montserrat-->
