--- a/telas/tela-inicial.html
+++ b/telas/tela-inicial.html
@@ -253,7 +253,7 @@
             </div>
         </div>
         <div class="section fp-auto-height s4">
-            <div class="container p-3 my-5">
+            <div class="container p-3 mt-3 mb-5">
                 <div class="row d-flex justify-content-around align-items-center mt-5">
                     <div class="col-lg-5 col-md-12 px-5">
                         <h3 class="p-1 text-center text-white font-weight-bold">Contate a gente!</h3>
@@ -296,15 +296,15 @@
             <footer class="footer p-2">
                 <div class="container">
                     <div class="social-icons text-center">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" data-toggle="tooltip" data-placement="top" title="Youtube"><i class="fab fa-youtube"></i></a>
+                        <a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </footer>
         </div>
-        
+
     </div>
 
     <!-- Bootstrap: Optional JavaScript -> jQuery first, then Popper.js, then Bootstrap JS -->
@@ -317,6 +317,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
     <!-- Importação Fullpage.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.js"
         integrity="sha512-Gx/C4x1qubng2MWpJIxTPuWch9O88dhFFfpIl3WlqH0jPHtCiNdYsmJBFX0q5gIzFHmwkPzzYTlZC/Q7zgbwCw=="
