revisao3 tela inicial

--- a/telas/tela-inicial.html
+++ b/telas/tela-inicial.html
@@ -51,7 +51,7 @@
                         <a class="nav-link pl-3" href="tela-inicial.html#funcionalidades">Funcionalidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pl-3" href="tela-inicial.html#feedback">Opinião dos usuários</a>
+                        <a class="nav-link pl-3" href="tela-inicial.html#comunidade">Comunidade</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pl-3" href="tela-inicial.html#contato">Contato</a>
@@ -216,7 +216,7 @@
                 <div class="row d-flex justify-content-around align-items-end mt-5">
                     <div class="col-lg-7 col-md-12 shadow text-left" id="container-arredondado">
                         <h3 class="mt-4 p-1 text-center text-white font-weight-bold">Comunidade</h3>
-                        <h6 class="p-1 px-5 mb-2 text-white text-center">O Alumnus possui cerca de <span class="font-weight-bold">1000 usuários</span> cadastrados.</h6> <!-- INFORMAÇÃO DINAMICA-->
+                        <h6 class="p-1 px-4 mb-2 text-white text-center">O Alumnus possui cerca de <span class="font-weight-bold">1000 usuários</span> cadastrados.</h6> <!-- INFORMAÇÃO DINAMICA-->
                         <div class="testimonial-section">
                             <h3 class="text-center p-1 font-weight-bold">Como os usuários descrevem o Alumnus</h3>
                             <div class="testimonial-contents">
@@ -333,8 +333,8 @@
         var fullpage = new fullpage("#fullpage", {
             autoScrolling: false,
             navigation: true,
-            navigationTooltips: ["Home", "Funcionalidades", "Opinião dos usuários", "Contato"],
-            anchors: ['home', 'funcionalidades', "feedback", "contato"],
+            navigationTooltips: ["Home", "Funcionalidades", "Comunidade", "Contato"],
+            anchors: ['home', 'funcionalidades', "comunidade", "contato"],
             showActiveTooltip: false,
             navigationPosition: "right",
             scrollBar: true,
