--- a/telas/tela-inicial.html
+++ b/telas/tela-inicial.html
@@ -212,11 +212,11 @@
             <div class="wave wave2"></div>
             <div class="wave wave3"></div>
             <div class="wave wave4"></div>
+            <h3 class="mt-5 p-1 pt-5 text-center text-white font-weight-bold">Comunidade</h3>
+            <h6 class="px-4 text-white text-center">O Alumnus possui cerca de <span class="font-weight-bold">1000 usuários</span> cadastrados.</h6> <!-- INFORMAÇÃO DINAMICA-->
             <div class="container p-3">
-                <div class="row d-flex justify-content-around align-items-end mt-5">
+                <div class="row d-flex justify-content-around align-items-end">
                     <div class="col-lg-7 col-md-12 shadow text-left" id="container-arredondado">
-                        <h3 class="mt-4 p-1 text-center text-white font-weight-bold">Comunidade</h3>
-                        <h6 class="p-1 px-4 mb-2 text-white text-center">O Alumnus possui cerca de <span class="font-weight-bold">1000 usuários</span> cadastrados.</h6> <!-- INFORMAÇÃO DINAMICA-->
                         <div class="testimonial-section">
                             <h3 class="text-center p-1 font-weight-bold">Como os usuários descrevem o Alumnus</h3>
                             <div class="testimonial-contents">
