validador html nas telas já feitas

--- a/telas/login-e-cadastro.html
+++ b/telas/login-e-cadastro.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                     <div class="form-inner">
-                        <form action="#" class="login">
+                        <form action="tela-principal.html" class="login"> <!--LEVA PRA TELA PRINCIPAL DA APLICAÇÃO-->
                             <div class="wrapper-input">
                                 <div class="input-data">
                                     <input onfocus="follow=false" onblur="follow=true" id="loginEmail" type="text"
