--- a/telas/ranking-visitante.html
+++ b/telas/ranking-visitante.html
@@ -38,7 +38,7 @@
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-globe-americas"></i>
                     </a>
-                    <div class="dropdown-menu mt-1 py-3 px-3 shadow" aria-labelledby="dropdownMenuLink">
+                    <div class="dropdown-menu mt-1 p-3 shadow" aria-labelledby="dropdownMenuLink">
                         <h6 class="pl-1">Idioma:</h6>
                         <div id="google_translate_element"></div>
                     </div>
@@ -76,7 +76,7 @@
 
     <main>
         <div id="page-container">
-            <div class="container my-5">
+            <div class="container my-2">
                 <h2 class="font-weight-bold p-2">Ranking de usuários <span class="negrito-roxo">Alumnus</span></h2>
                 <h5 class="p-1">Compare seu <span class="negrito-roxo">desempenho</span> com os outros usuários da
                     plataforma!</h5>
@@ -243,13 +243,12 @@
     <!-- Importação da biblioteca de icones FontAwesome-->
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- Tradução da página-->
-    <script type="text/javascript">
+    <script>
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({ pageLanguage: 'pt', includedLanguages: 'en,pt' }, 'google_translate_element');
         }
     </script>
-    <script type="text/javascript"
-        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 
 </html>
