fitToSection=true na tela inicial

--- a/telas/tela-inicial.html
+++ b/telas/tela-inicial.html
@@ -350,7 +350,7 @@
         var fullpage = new fullpage("#fullpage", {
             autoScrolling: false,
             navigation: true,
-            fitToSection: false,
+            fitToSection: true,
             navigationTooltips: ["Home", "Funcionalidades", "Comunidade", "Contato"],
             anchors: ['home', 'funcionalidades', "comunidade", "contato"],
             showActiveTooltip: false,
