--- a/telas/tela-principal.html
+++ b/telas/tela-principal.html
@@ -104,7 +104,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="ranking-usuario.html">
                                 <span class="icon"><i class="fas fa-quote-left fa-fw"></i>
                                 </span>
                                 <span class="list">Publicações</span>
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="perfil.html">
                                 <span class="icon"><i class="fas fa-address-card fa-fw"></i></span>
                                 <span class="list">Perfil</span>
                             </a>
@@ -176,7 +176,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#">
+                            <a href="perfil.html">
                                 <div class="card m-2 p-2">
                                     <div class="card-body">
                                         <i class="fas fa-address-card fa-fw fa-4x"></i>
@@ -184,7 +184,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#">
+                            <a href="ranking-usuario.html">
                                 <div class="card m-2 p-2">
                                     <div class="card-body">
                                         <i class="fas fa-user-friends fa-fw fa-4x"></i>
