--- a/telas/ranking-usuario.html
+++ b/telas/ranking-usuario.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - Alumnus</title>
+    <title>Ranking - Alumnus</title>
     <!-- Favicon da página -->
     <link rel="icon" href="../img/icons/favicon.ico">
     <!-- Importação da fonte Montserrat-->
@@ -12,10 +12,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- datatable -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
     <!-- Folha de estilo global -->
     <link rel="stylesheet" href="../css/global.css">
     <!-- Folha(s) de estilos específica(s) -->
-    <link rel="stylesheet" href="../css/perfil.css">
+    <link rel="stylesheet" href="../css/ranking-usuario.css">
 </head>
 
 <body>
@@ -137,10 +139,91 @@
             </div>
 
             <div class="container">
-                <h1 class="mt-5">Perfil</h1>
+                <h1 class="mt-5">Ranking Semanal</h1>
                 <hr>
+                <div class="row d-flex justify-content-around align-items-center mt-5">
+                    <div class="col-lg-4 col-md-12 px-5">
+                        <div class="center-image d-none d-sm-none d-md-none d-lg-block">
+                            <img src="../img/ranking.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-8 col-md-12">
+                        <table id="example" class="table table-striped table-bordered" style="max-width:100%">
+                            <thead>
+                                <tr>
+                                    <th>Posição</th>
+                                    <th>Nickname</th>
+                                    <th>Pontos</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Romário</td>
+                                    <td>980</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Ronaldo</td>
+                                    <td>900</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Pelé</td>
+                                    <td>870</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Ribamar</td>
+                                    <td>860</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Bebeto</td>
+                                    <td>850</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Luan Santana</td>
+                                    <td>800</td>
+                                </tr>
+                                <tr>
+                                    <td>7</td>
+                                    <td>Yago Pikachu</td>
+                                    <td>700</td>
+                                </tr>
+                                <tr>
+                                    <td>8</td>
+                                    <td>Linus Torvalds</td>
+                                    <td>600</td>
+                                </tr>
+                                <tr>
+                                    <td>9</td>
+                                    <td>Ronaldinho</td>
+                                    <td>500</td>
+                                </tr>
+                                <tr>
+                                    <td>10</td>
+                                    <td>Santana</td>
+                                    <td>450</td>
+                                </tr>
+                                <tr>
+                                    <td>11</td>
+                                    <td>Xandy</td>
+                                    <td>400</td>
+                                </tr>
+                                <tr>
+                                    <td>12</td>
+                                    <td>Júnior</td>
+                                    <td>300</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Modal Notificações-->
@@ -213,6 +296,53 @@
             }
         }
 
+    </script>
+    <!-- datatable-->
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable({
+                language: {
+                    "sEmptyTable": "Nenhum registro encontrado",
+                    "sInfo": "Mostrando de _START_ até _END_ de _TOTAL_ registros",
+                    "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
+                    "sInfoFiltered": "(Filtrados de _MAX_ registros)",
+                    "sInfoPostFix": "",
+                    "sInfoThousands": ".",
+                    "sLengthMenu": "_MENU_ resultados por página",
+                    "sLoadingRecords": "Carregando...",
+                    "sProcessing": "Processando...",
+                    "sZeroRecords": "Nenhum registro encontrado",
+                    "sSearch": "Pesquisar",
+                    "oPaginate": {
+                        "sNext": "Próximo",
+                        "sPrevious": "Anterior",
+                        "sFirst": "Primeiro",
+                        "sLast": "Último"
+                    },
+                    "oAria": {
+                        "sSortAscending": ": Ordenar colunas de forma ascendente",
+                        "sSortDescending": ": Ordenar colunas de forma descendente"
+                    },
+                    "select": {
+                        "rows": {
+                            "_": "Selecionado %d linhas",
+                            "0": "Nenhuma linha selecionada",
+                            "1": "Selecionado 1 linha"
+                        }
+                    },
+                    "buttons": {
+                        "copy": "Copiar para a área de transferência",
+                        "copyTitle": "Cópia bem sucedida",
+                        "copySuccess": {
+                            "1": "Uma linha copiada com sucesso",
+                            "_": "%d linhas copiadas com sucesso"
+                        }
+                    }
+                }
+            });
+        });
     </script>
 </body>
 
