--- a/telas/ranking-visitante.html
+++ b/telas/ranking-visitante.html
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-12">
-                        <table id="example" class="table table-striped table-bordered" style="width:100%">
+                        <table id="example" class="table table-striped table-bordered" style="max-width:100%">
                             <thead>
                                 <tr>
                                     <th>Posição</th>
