--- a/telas/ranking-usuario.html
+++ b/telas/ranking-usuario.html
@@ -28,10 +28,8 @@
                 <a href="tela-principal.html">ALUMNUS</a>
             </div>
             <div class="top_menu">
-                <div class="home_link">
-                    <a href="#">
-                        <span class="icon"><i class="fas fa-home"></i></span>
-                        <span>Home</span>
+                <div>
+                    <a href="#" class="btn btn-danger">Sair
                     </a>
                 </div>
                 <div class="right_info">
@@ -66,19 +64,13 @@
                 <div class="inner__sidebar_menu">
                     <ul>
                         <li>
-                            <a href="tela-principal.html" class="">
+                            <a href="tela-principal.html" class="active">
                                 <span class="icon"><i class="fas fa-home fa-fw"></i></span>
                                 <span class="list">Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="icon">
-                                    <i class="fas fa-pencil-alt fa-fw"></i></span>
-                                <span class="list">Atividades</span>
-                            </a>
-                        </li>
-                        <!-- <div class="dropdown">
+                            <div class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
                                     <span class="icon">
@@ -86,11 +78,11 @@
                                         <span class="list pl-2">Atividades</span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-roxo ml-4 shadow">
-                                    <a class="dropdown-item" href="#">Fazer atividade</a>
-                                    <a class="dropdown-item" href="#">Programar atividade</a>
-                                    <a class="dropdown-item" href="#">Histórico</a>
+                                    <a class="dropdown-item" href="atividade.html">Menu - Atividades</a>
+                                    <a class="dropdown-item" href="programar-atividade.html">Fazer atividade</a>
+                                    <a class="dropdown-item" href="historico-atividade.html">Histórico</a>
                                 </div>
-                            </div> -->
+                            </div>
                         <li>
                             <a href="#">
                                 <span class="icon"><i class="far fa-calendar-alt fa-fw"></i>
@@ -113,14 +105,14 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="ranking-usuario.html">
                                 <span class="icon"><i class="fas fa-user-friends fa-fw"></i>
                                 </span>
                                 <span class="list">Ranking</span>
                             </a>
                         </li>
                         <li>
-                            <a href="perfil.html" class="active">
+                            <a href="#">
                                 <span class="icon"><i class="fas fa-address-card fa-fw"></i></span>
                                 <span class="list">Perfil</span>
                             </a>
@@ -141,89 +133,90 @@
             <div class="container">
                 <h1 class="mt-5">Ranking Semanal</h1>
                 <hr>
-                <div class="row d-flex justify-content-around align-items-center mt-5">
-                    <div class="col-lg-4 col-md-12 px-5">
-                        <div class="center-image d-none d-sm-none d-md-none d-lg-block">
-                            <img src="../img/ranking.svg" alt="">
+                <div class="p-3 mt-2">
+                    <div class="row d-flex justify-content-around align-items-center">
+                        <div class="col-lg-4 col-md-12 px-5">
+                            <div class="center-image d-none d-sm-none d-md-none d-lg-block">
+                                <img src="../img/ranking.svg" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-8 col-md-12">
-                        <table id="example" class="table table-striped table-bordered" style="max-width:100%">
-                            <thead>
-                                <tr>
-                                    <th>Posição</th>
-                                    <th>Nickname</th>
-                                    <th>Pontos</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Romário</td>
-                                    <td>980</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Ronaldo</td>
-                                    <td>900</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Pelé</td>
-                                    <td>870</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Ribamar</td>
-                                    <td>860</td>
-                                </tr>
-                                <tr>
-                                    <td>5</td>
-                                    <td>Bebeto</td>
-                                    <td>850</td>
-                                </tr>
-                                <tr>
-                                    <td>6</td>
-                                    <td>Luan Santana</td>
-                                    <td>800</td>
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>Yago Pikachu</td>
-                                    <td>700</td>
-                                </tr>
-                                <tr>
-                                    <td>8</td>
-                                    <td>Linus Torvalds</td>
-                                    <td>600</td>
-                                </tr>
-                                <tr>
-                                    <td>9</td>
-                                    <td>Ronaldinho</td>
-                                    <td>500</td>
-                                </tr>
-                                <tr>
-                                    <td>10</td>
-                                    <td>Santana</td>
-                                    <td>450</td>
-                                </tr>
-                                <tr>
-                                    <td>11</td>
-                                    <td>Xandy</td>
-                                    <td>400</td>
-                                </tr>
-                                <tr>
-                                    <td>12</td>
-                                    <td>Júnior</td>
-                                    <td>300</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="col-lg-8 col-md-12">
+                            <table id="example" class="table table-striped table-bordered" style="max-width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>Posição</th>
+                                        <th>Nickname</th>
+                                        <th>Pontos</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Romário</td>
+                                        <td>980</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Ronaldo</td>
+                                        <td>900</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>Pelé</td>
+                                        <td>870</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Ribamar</td>
+                                        <td>860</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>Bebeto</td>
+                                        <td>850</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Luan Santana</td>
+                                        <td>800</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>Yago Pikachu</td>
+                                        <td>700</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Linus Torvalds</td>
+                                        <td>600</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9</td>
+                                        <td>Ronaldinho</td>
+                                        <td>500</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Santana</td>
+                                        <td>450</td>
+                                    </tr>
+                                    <tr>
+                                        <td>11</td>
+                                        <td>Xandy</td>
+                                        <td>400</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>Júnior</td>
+                                        <td>300</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <!-- Modal Notificações-->
