--- a/telas/tela-principal.html
+++ b/telas/tela-principal.html
@@ -26,10 +26,8 @@
                 <a href="tela-principal.html">ALUMNUS</a>
             </div>
             <div class="top_menu">
-                <div class="home_link">
-                    <a href="#">
-                        <span class="icon"><i class="fas fa-home"></i></span>
-                        <span>Home</span>
+                <div>
+                    <a href="#" class="btn btn-danger">Sair
                     </a>
                 </div>
                 <div class="right_info">
@@ -70,13 +68,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="icon">
-                                    <i class="fas fa-pencil-alt fa-fw"></i></span>
-                                <span class="list">Atividades</span>
-                            </a>
-                        </li>
-                        <!-- <div class="dropdown">
+                            <div class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                                     aria-expanded="false">
                                     <span class="icon">
@@ -84,11 +76,11 @@
                                         <span class="list pl-2">Atividades</span>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-roxo ml-4 shadow">
-                                    <a class="dropdown-item" href="#">Fazer atividade</a>
-                                    <a class="dropdown-item" href="#">Programar atividade</a>
-                                    <a class="dropdown-item" href="#">Histórico</a>
+                                    <a class="dropdown-item" href="atividade.html">Menu - Atividades</a>
+                                    <a class="dropdown-item" href="programar-atividade.html">Fazer atividade</a>
+                                    <a class="dropdown-item" href="historico-atividade.html">Histórico</a>
                                 </div>
-                            </div> -->
+                            </div>
                         <li>
                             <a href="#">
                                 <span class="icon"><i class="far fa-calendar-alt fa-fw"></i>
@@ -104,21 +96,21 @@
                             </a>
                         </li>
                         <li>
-                            <a href="ranking-usuario.html">
+                            <a href="#">
                                 <span class="icon"><i class="fas fa-quote-left fa-fw"></i>
                                 </span>
                                 <span class="list">Publicações</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="ranking-usuario.html">
                                 <span class="icon"><i class="fas fa-user-friends fa-fw"></i>
                                 </span>
                                 <span class="list">Ranking</span>
                             </a>
                         </li>
                         <li>
-                            <a href="perfil.html">
+                            <a href="#">
                                 <span class="icon"><i class="fas fa-address-card fa-fw"></i></span>
                                 <span class="list">Perfil</span>
                             </a>
@@ -176,7 +168,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="perfil.html">
+                            <a href="#">
                                 <div class="card m-2 p-2">
                                     <div class="card-body">
                                         <i class="fas fa-address-card fa-fw fa-4x"></i>
