Versao antes da poc v1

--- a/telas/ranking-visitante.html
+++ b/telas/ranking-visitante.html
@@ -236,7 +236,8 @@
                             "_": "%d linhas copiadas com sucesso"
                         }
                     }
-                }
+                },
+                responsive: true
             });
         });
     </script>
