--- a/telas/tela-principal.html
+++ b/telas/tela-principal.html
@@ -77,7 +77,7 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-roxo ml-4 shadow">
                                     <a class="dropdown-item" href="atividade.html">Menu - Atividades</a>
-                                    <a class="dropdown-item" href="programar-atividade.html">Fazer atividade</a>
+                                    <a class="dropdown-item" href="programar-atividade.html">Fazer atividade agora</a>
                                     <a class="dropdown-item" href="historico-atividade.html">Histórico</a>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="perfil.html">
                                 <span class="icon"><i class="fas fa-address-card fa-fw"></i></span>
                                 <span class="list">Perfil</span>
                             </a>
@@ -144,7 +144,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#">
+                            <a href="atividade.html">
                                 <div class="card m-2 p-2">
                                     <div class="card-body">
                                         <i class="fas fa-pencil-alt fa-fw fa-4x"></i>
@@ -168,7 +168,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="#">
+                            <a href="perfil.html">
                                 <div class="card m-2 p-2">
                                     <div class="card-body">
                                         <i class="fas fa-address-card fa-fw fa-4x"></i>
